# t2b

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cc  t2b.cabal  t2b.cc  t2b.hpp
app/: Main.hs
app/T2B/: AST.hs  Interpreter.hs  Parser.hs  Scope.hs  T2B.hs
example/: hello.t2b  if.t2b  interpolation.t2b  len.t2b  quine.t2b  times.t2b  variables.t2b
example_old/: macro.t2b  times.t2b
include/t2b/: ast.hpp  t2b.hpp  value.hpp  visitor.hpp
src/: CMakeLists.txt  T2B.g4  ast.cpp  interpreter.cc  interpreter.h  main.cc  scope.cc  scope.h  state.h  t2b.cc  t2b_parser.y  t2b_scanner.l  type.cc  type.h  value.cc  value.cpp  value.h  visitor.cpp
